
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int input_bits_t ;
typedef int ds4_instance_t ;



__attribute__((used)) static void ds4_get_buttons(void *data, input_bits_t *state)
{
   ds4_instance_t *instance = (ds4_instance_t *)data;
   if(!instance)
      return;


}
